Fixes for safari and firefox on spacings, SASS optimization

--- a/sass/_smd-palette.scss
+++ b/sass/_smd-palette.scss
@@ -93,7 +93,7 @@ $smd-bg-colors: (
 );
 
 // Print all the utility classes
-.smd {
+#{$site-prefix} {
   @include smd-color($smd-bg-colors, 'background-color', $separator: '-');
   @include smd-color($smd-colors, 'color', $separator: '-');
 }
