--- a/sass/smd.scss
+++ b/sass/smd.scss
@@ -21,6 +21,9 @@
 // be found in _reboot.scss and _variables.scss
 // ------------------------------------------------ //
 
+// Website prefix
+$site-prefix: '.smd';
+
 // Typography
 $enable-rfs: true;
 $headings-font-family: 'SourceSerifProBold', serif;
